--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -9,6 +9,7 @@ en:
       faq: FAQ
       login: Login
       sign_up: Sign Up
+      my_account: My Account
     footer:
       recent_updates: Recent Updates
       popular_releases: Popular Releases
